<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.20">
  <GVL Name="RFD_Cmd" Id="{b9d100af-ead9-4729-bfd8-63723378b736}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	/// ctrl state definitions
	/// Error
	cRFD_STA_Error: INT := 256;
	/// Power On
	cRFD_STA_PowerOnBusy: INT := 999;
	cRFD_STA_WaitForJob: INT := 1002;
	/// RESET Reader 
	cRFD_STA_ResetBusy: INT := 1003;
	/// Turn Off antenna 
	cRFD_STA_OffBusy: INT := 1007;
	cRFD_STA_Off: INT := 1008;
	/// Write Data to Tag 
	cRFD_STA_WriteBusy: INT := 1009;
	/// Read Data from Tag 
	cRFD_STA_ReadBusy: INT := 1011;
	/// Tag initialisation 
	cRFD_STA_TagInitBusy: INT := 1013;
	/// Check connection to antenna
	cRFD_STA_CheckBusy: INT := 1017;
	/// Service function read MDS-State (State of the near Tag)
	cRFD_STA_MDSBusy: INT := 1019;
	/// Service function read SLG State (State of the antenna)
	cRFD_STA_SLGBusy: INT := 1021;
	/// ctrl commands definitions
	/// specific commands >200 - every command has to be a even number
	cRFD_CMD_DONE: INT := -1;
	/// Switch controller on 
	cRFD_CMD_CTRL_ON: INT := 1000;
	/// Switch controller off 
	cRFD_CMD_CTRL_OFF: INT := 1006;
	/// Write Data to Tag 
	cRFD_CMD_Write: INT := 1010;
	/// Read Data from Tag 
	cRFD_CMD_Read: INT := 1012;
	/// Check connection to antenna 
	cRFD_CMD_Check: INT := 1018;
	/// Service function read MDS-State (State of the near Tag)
	cRFD_CMD_MDS: INT := 1020;
	/// Service function read SLG State (State of the antenna)
	cRFD_CMD_SLG: INT := 1022;
	/// Sub States
	/// Power On Busy
	cRFD_SUB_SetBaudrate: INT := 2001;
	/// Set Communication Settings
	cRFD_SUB_SetComSettings: INT := 2002;
	///  Clear Buffer
	cRFD_SUB_ClearBuffer: INT := 2003;
	/// Initialisation String sending
	cRFD_SUB_InitString: INT := 2004;
	///  Check Power On State
	cRFD_SUB_CheckPon: INT := 2005;
	/// OFF Busy
	cRFD_SUB_Prepare: INT := 2010;
	/// Data send
	cRFD_SUB_SendBusy: INT := 2011;
	/// Wait Answer
	cRFD_SUB_WaitAnswer: INT := 2012;
	/// SLG Write Mode 1
	cRFD_SUB_Write1: INT := 2020;
	/// SLG Wait Mode 1
	cRFD_SUB_Wait1: INT := 2021;
	/// SLG Write Mode 6
	cRFD_SUB_Write6: INT := 2022;
	/// SLG Wait Mode 6
	cRFD_SUB_Wait6: INT := 2023;
	///  Substates finished
	cRFD_SUB_SubStatesEnd: INT := 2100;
END_VAR]]></Declaration>
    <ObjectProperties>﻿<XmlArchive>
  <Data>
    <o xml:space="preserve" t="FileLink">
      <v n="FileName">""</v>
      <v n="LinkType" t="LinkType">ExportBeforeCompile</v>
      <v n="lTimeStamp">0L</v>
    </o>
  </Data>
  <TypeList>
    <Type n="FileLink">{0e9188e9-4f07-4676-afb5-399bcddbc44b}</Type>
    <Type n="Int64">System.Int64</Type>
    <Type n="LinkType">{926664ef-7286-4d12-8220-5000ab511fa6}</Type>
    <Type n="String">System.String</Type>
  </TypeList>
</XmlArchive></ObjectProperties>
  </GVL>
</TcPlcObject>