<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.20">
  <DUT Name="T_RFD_StateMachine" Id="{a517ce1a-b938-4526-b147-20ccd6dbf4af}">
    <Declaration><![CDATA[TYPE T_RFD_StateMachine :
STRUCT
	///actual state
	intState: INT;
	///state of last cycle
	intStateLastCycle: INT;
	///save history backup p.e. in ERROR state
	intStateHistory: INT;
	///set state for next cycle
	intStateNext: INT;
	///Time in this State
	udiTimeInState_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>