<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_RFW_Cfg" Id="{6b942f5f-0429-4027-a9d6-f0ab33a8eff8}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_RFW_Cfg :
STRUCT
	eTyp: E_Typ_RFW;
	/// Get automatically the Tray ID too 
	bolGetTrayIDAuto: BOOL;
	/// Net ID oft EtherCat Master
	stNetId: TC2_SYSTEM.T_AmsNetID;
	/// Port Number of EtherCat Slave Comunication Module
	uinSlaveAddr: UINT;
	/// Send every New RFID to Line controller
	bolDtChToLine_send: BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>